# relic-os

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md
crates/common/relic-abi/: Cargo.toml
crates/common/relic-abi/src/: bootstrap.rs  caddr.rs  cap.rs  lib.rs  syscall.rs
crates/common/relic-std/: Cargo.toml
crates/common/relic-std/src/: heap.rs  lib.rs  raw_syscall.rs  syscall_wrapper.rs  tls.rs
crates/common/relic-utils/: Cargo.toml
crates/common/relic-utils/src/: align.rs  lib.rs  macros.rs
crates/supervisor/kernel/: Cargo.toml
crates/supervisor/kernel-core/: Cargo.toml
crates/supervisor/kernel-core/src/: addr.rs  lib.rs
crates/supervisor/kernel-core/src/arch/: mod.rs
crates/supervisor/kernel-core/src/arch/x86_64/: mod.rs
crates/supervisor/kernel-core/src/arch/x86_64/capability/: mod.rs
crates/supervisor/kernel-core/src/arch/x86_64/capability/paging/: mod.rs  page.rs  page_cap.rs  pml4.rs
crates/supervisor/kernel-core/src/arch/x86_64/paging/: mod.rs  table.rs  utils.rs
crates/supervisor/kernel-core/src/capability/: cpool.rs  mod.rs  untyped.rs
crates/supervisor/kernel-core/src/util/: managed_arc.rs  memory_object.rs  memory_region.rs  mod.rs
crates/supervisor/kernel-core/src/util/managed_arc/: rwlock.rs  weak_pool.rs
crates/supervisor/kernel/src/: addr.rs  bootboot.rs  capability.rs  frame_buffer.rs  logging.rs  main.rs  syscall_processor.rs
crates/supervisor/kernel/src/arch/x86_64/: bootstrap.rs  gdt.rs  globals.rs  interrupts.rs  mod.rs  serial.rs  tls.rs
crates/supervisor/kernel/src/arch/x86_64/capability/paging/: mod.rs  page.rs  page_cap.rs  pml4.rs  raw_page.rs
crates/supervisor/kernel/src/arch/x86_64/paging/: mod.rs  table.rs
crates/supervisor/kernel/src/arch/x86_64/task/: mod.rs  registers.rs
crates/supervisor/kernel/src/capability/: cpool.rs  endpoint.rs  mod.rs  task.rs  untyped.rs
crates/supervisor/kernel/src/ramdisk/: elf_loader.rs  ustar.rs
crates/supervisor/kernel/src/update/: capability.rs  mod.rs  unsafe_ref.rs
crates/supervisor/kernel/src/update/capability/: cpool.rs  task.rs  untyped.rs
crates/supervisor/kernel/src/update/capability/arch/: mod.rs  page_cap.rs  pages.rs  pd.rs  pdpt.rs  pml4.rs  pt.rs  raw_page.rs
crates/supervisor/kernel/src/util/: boxed.rs  managed_arc.rs  memory_region.rs  mod.rs  unsafe_ref.rs
crates/supervisor/kernel/src/util/managed_arc/: rwlock.rs  weak_pool.rs
crates/userspace/relic-sigma/: Cargo.toml
crates/userspace/relic-sigma/src/: main.rs
crates/userspace/relic-sigma/src/graphics/: fb.rs  fonts.rs  gui.rs  mod.rs
triplets/: relic_x86_64.ld  x86_64-relic-kernel.json
