[package]
name = "relic-std"
version = "0.0.1"
authors = ["Vinay Chandra Dommeti <relic@vinay.vc>"]
edition = "2018"
description = "Relic OS - STD Package"

[dependencies]
relic-abi = { path = "../relic-abi" }

buddy_system_allocator = { git = "https://github.com/vinaychandra/buddy_system_allocator", rev = "9d2c4b7", features = ["const_fn"] }
