[package]
name = "relic-std"
version = "0.0.1"
authors = ["Vinay Chandra Dommeti <relic@vinay.vc>"]
edition = "2018"
description = "Relic OS - STD Package"

[dependencies]
relic-abi = { path = "../relic-abi" }

buddy_system_allocator = { git = "https://github.com/rcore-os/buddy_system_allocator", rev = "6586514", features = ["const_fn"] }
