[package]
name = "relic-kernel-core"
version = "0.0.1"
authors = ["Vinay Chandra Dommeti <relic@vinay.vc>"]
edition = "2018"
description = "Relic OS - Main Kernel Code"

[dependencies]
relic-utils = { path = "../../common/relic-utils" }
relic-abi = { path = "../../common/relic-abi" }

spin = "0.8"
bitflags = "1.2"
getset = "0.1"
