[package]
name = "relic-kernel"
version = "0.0.1"
authors = ["Vinay Chandra Dommeti <relic@vinay.vc>"]
edition = "2018"
description = "Relic OS - Kernel entry point"

[dependencies]
relic-abi = { path = "../../common/relic-abi" }
relic-utils = { path = "../../common/relic-utils" }

acpi = "2.0.0"
bitflags = "1.2"
bitfield = "0.13"
getset = "0.1"
heapless = "0.7"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
spin = "0.9"
static-alloc = "0.2.2"
elfloader = "0.12"
crossbeam-utils = { version = "0.8.3", default-features = false }
paste = "1.0"
static_assertions = "1.1.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
apic = { git = "https://github.com/rust-osdev/apic", rev = "c662e70" }
lazy_static = { version = "1", features = ["spin_no_std"] }
uart_16550 = "0.2.10"
x86_64 = "0.14"
