[package]
name = "relic-sigma"
version = "0.0.1"
authors = ["Vinay Chandra Dommeti <relic@vinay.vc>"]
edition = "2018"
description = "Relic OS - Sigma Executable"

[dependencies]
relic-std = { path = "../../common/relic-std" }
relic-abi = { path = "../../common/relic-abi" }
relic-utils = { path = "../../common/relic-utils" }

# Text UI 
tui = { git = "https://github.com/vinaychandra/tui-rs", rev = "6b3c512" }
# tui = { git = "https://github.com/vinaychandra/tui-rs", rev = "d26f949" }

# RustType font support
rusttype = { version = "0.9", default-features = false, features = ["libm-math", "has-atomics"] }
libm = { version = "0.2.1", default-features = false }

num-traits = { version = "0.2", default-features = false, features = ["libm"] }

log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
crossbeam-queue = { version = "0.3.1", default-features = false, features = ["alloc"] }
spin = "0.9"
